// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disabled comments 1`] = `
<View>
  <Text
    maxFontSizeMultiplier={2}
    minimumFontScale={0.7}
  >
    Comments for this article have been turned off
  </Text>
  <Text
    maxFontSizeMultiplier={2}
    minimumFontScale={0.7}
  >
    For more details, please see our 
    

    <Text
      accessibilityRole="link"
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
    >
      community guidelines
    </Text>
  </Text>
</View>
`;

exports[`enabled comments 1`] = `
<View>
  <Text
    maxFontSizeMultiplier={2}
    minimumFontScale={0.7}
  >
    123 comments
  </Text>
  <Text
    maxFontSizeMultiplier={2}
    minimumFontScale={0.7}
  >
    Comments are subject to our community guidelines, which can be viewed 
    <Text
      accessibilityRole="link"
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
    >
      here
    </Text>
  </Text>
  <View
    accessibilityLabel="View comments"
    accessibilityRole="button"
    focusable={true}
  >
    <Text
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
      title="View comments"
    >
      View comments
    </Text>
  </View>
</View>
`;

exports[`should render disabled-comments if commentsGloballyDisabled 1`] = `
<View>
  <Text
    maxFontSizeMultiplier={2}
    minimumFontScale={0.7}
  >
    Comments are currently unavailable
  </Text>
</View>
`;

exports[`single comment 1`] = `
<View>
  <Text
    maxFontSizeMultiplier={2}
    minimumFontScale={0.7}
  >
    1 comment
  </Text>
  <Text
    maxFontSizeMultiplier={2}
    minimumFontScale={0.7}
  >
    Comments are subject to our community guidelines, which can be viewed 
    <Text
      accessibilityRole="link"
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
    >
      here
    </Text>
  </Text>
  <View
    accessibilityLabel="View comments"
    accessibilityRole="button"
    focusable={true}
  >
    <Text
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
      title="View comments"
    >
      View comments
    </Text>
  </View>
</View>
`;

exports[`zero comments 1`] = `
<View>
  <Text
    maxFontSizeMultiplier={2}
    minimumFontScale={0.7}
  >
    0 comments
  </Text>
  <Text
    maxFontSizeMultiplier={2}
    minimumFontScale={0.7}
  >
    Comments are subject to our community guidelines, which can be viewed 
    <Text
      accessibilityRole="link"
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
    >
      here
    </Text>
  </Text>
  <View
    accessibilityLabel="Post a comment"
    accessibilityRole="button"
    focusable={true}
  >
    <Text
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
      title="Post a comment"
    >
      Post a comment
    </Text>
  </View>
</View>
`;
